# foundry-hosted-agent

./: .gitignore  README.md  agent.yaml  main.py
frameworks/agent-framework/: README.md
frameworks/agent-framework/basic/: README.md
frameworks/agent-framework/basic-invocations/: README.md
frameworks/agent-framework/caller/: README.md
frameworks/agent-framework/executor/: README.md
frameworks/agent-framework/files/: .dockerignore  Dockerfile  README.md  agent.yaml  main.py  pyproject.toml
frameworks/agent-framework/files/clients/: sample.txt  test_datacontent.py  test_files_endpoint.py
frameworks/agent-framework/files/sandbox/: .gitkeep
frameworks/agent-framework/foundry-toolbox/: README.md
frameworks/agent-framework/mcp/: README.md
frameworks/agent-framework/tools/: .env.example  Dockerfile  README.md  agent.yaml  main.py  pyproject.toml
frameworks/agent-framework/workflows/: README.md
frameworks/bring-your-own/: README.md
frameworks/copilot-sdk/: README.md
frameworks/langgraph/: README.md
