[project]
name = "agent-framework-files"
version = "0.1.0"
description = "File Inspection Agent - diagnostic hosted agent to debug file/DataContent handling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-foundry",
    "agent-framework-foundry-hosting>=1.0.0a260630",
    "azure-identity",
    "python-dotenv",
    "httpx",
]

[dependency-groups]
dev = [
    "debugpy",
]

[tool.uv]
package = false
prerelease = "allow"
