[project]
name = "foundry-hosted-agent"
version = "0.1.0"
description = "Seattle Hotel Agent - Microsoft Agent Framework on Azure AI Foundry Hosted Agent service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-foundry",
    "agent-framework-foundry-hosting>=1.0.0a260630",
    "azure-identity",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "debugpy",
]

[tool.uv]
package = false
prerelease = "allow"